--- a/class-04/demo/demo.html
+++ b/class-04/demo/demo.html
@@ -5,7 +5,7 @@
   </head>
   <body>
     <header>
-      <h1>The Cookie Shop</h1>
+      <h1>The Cookie Shop Day 1</h1>
         <nav>
           <ul>
             <li><a href="/">Link 1</a></li>
