--- a/class-08/inclass-demo/index.html
+++ b/class-08/inclass-demo/index.html
@@ -17,7 +17,7 @@
     <h1>The Cookie Shop</h1>
     <nav>
       <ul>
-        <li><a href="https://reyjroliva.github.io/hello-world-102/">Rey's Website</a></li>
+        <li><a href="https://reyjroliva.github.io/hello-world-102/">Website example</a></li>
         <li><a href="demo.html">Link 2</a></li>
         <li><a href="#">Link 3</a></li>
       </ul>
@@ -63,7 +63,7 @@
     howManyCats();
   </script>
   <footer>
-    <p>&copy; 2022 The Cookie Shop</p>
+    <p>&copy; 2024 The Cookie Shop</p>
   </footer>
 </body>
 
